# Begin

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp  test.cpp
src/tempDir/: foo.cpp  foo2.cpp
